--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,8 +1,19 @@
+if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
+  set(BUILD_TESTS_DEFAULT ON)
+else()
+  set(BUILD_TESTS_DEFAULT OFF)
+endif()
+
+option(BUILD_TESTS "Build sources in `/test` directory" "${BUILD_TESTS_DEFAULT}")
+if(NOT BUILD_TESTS)
+  return()
+endif()
+
 function(build_test test_name test_source)
-  message(STATUS "${CMAKE_PROJECT_NAME}: adding test: \"${test_name}\"")
+  message(STATUS "${PROJECT_NAME}: adding test: \"${test_name}\"")
   add_executable(${test_name} ${test_source})
-  target_link_libraries(${test_name} PRIVATE ${CMAKE_PROJECT_NAME})
-  target_include_directories(${test_name} PRIVATE ${${CMAKE_PROJECT_NAME}_INCLUDES})
+  target_link_libraries(${test_name} PRIVATE ${PROJECT_NAME})
+  target_include_directories(${test_name} PRIVATE ${${PROJECT_NAME}_INCLUDES})
   target_compile_features(${test_name} PUBLIC cxx_std_17)
   set_target_properties(${test_name} PROPERTIES CXX_EXTENSIONS OFF)
 endfunction()
